--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -1548,6 +1548,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid search for ExtraTreesClassifier with ADASYN:\n",
+      "Fitting 10 folds for each of 1 candidates, totalling 10 fits\n",
+      "\n",
+      "Best Model based on Accuracy:\n",
+      "Best parameters: {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Confusion Matrix:\n",
+      "[[26 22]\n",
+      " [ 7 95]]\n",
+      "\n",
+      "True Negatives (TN): 26\n",
+      "False Positives (FP): 22\n",
+      "False Negatives (FN): 7\n",
+      "True Positives (TP): 95\n",
+      "\n",
+      "Accuracy: 0.807\n",
+      "Precision: 0.812\n",
+      "Recall: 0.931\n",
+      "Specificity: 0.542\n",
+      "F1 Score: 0.868\n",
+      "Matthews Correlation Coefficient (MCC): 0.533\n",
+      "\n",
+      "Best Model based on MCC Score:\n",
+      "Best parameters: {'bootstrap': True, 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Confusion Matrix:\n",
+      "[[38 10]\n",
+      " [10 92]]\n",
+      "\n",
+      "True Negatives (TN): 38\n",
+      "False Positives (FP): 10\n",
+      "False Negatives (FN): 10\n",
+      "True Positives (TP): 92\n",
+      "\n",
+      "Accuracy: 0.867\n",
+      "Precision: 0.902\n",
+      "Recall: 0.902\n",
+      "Specificity: 0.792\n",
+      "F1 Score: 0.902\n",
+      "Matthews Correlation Coefficient (MCC): 0.694\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import confusion_matrix, matthews_corrcoef, make_scorer, accuracy_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "def print_confusion_matrix_report(cm, y_true, y_pred):\n",
+    "    tn, fp, fn, tp = cm.ravel()\n",
+    "    total = np.sum(cm)\n",
+    "    accuracy = (tp + tn) / total\n",
+    "    precision = tp / (tp + fp) if (tp + fp) != 0 else 0\n",
+    "    recall = tp / (tp + fn) if (tp + fn) != 0 else 0\n",
+    "    specificity = tn / (tn + fp) if (tn + fp) != 0 else 0\n",
+    "    f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) != 0 else 0\n",
+    "    mcc = matthews_corrcoef(y_true, y_pred)\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(cm)\n",
+    "    print()\n",
+    "    print(f\"True Negatives (TN): {tn}\")\n",
+    "    print(f\"False Positives (FP): {fp}\")\n",
+    "    print(f\"False Negatives (FN): {fn}\")\n",
+    "    print(f\"True Positives (TP): {tp}\")\n",
+    "    print()\n",
+    "    print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "    print(f\"Precision: {precision:.3f}\")\n",
+    "    print(f\"Recall: {recall:.3f}\")\n",
+    "    print(f\"Specificity: {specificity:.3f}\")\n",
+    "    print(f\"F1 Score: {f1_score:.3f}\")\n",
+    "    print(f\"Matthews Correlation Coefficient (MCC): {mcc:.3f}\")\n",
+    "    if precision == 0 and recall == 0:\n",
+    "        warnings.warn(\"Precision and Recall are both zero. F1 Score may not be meaningful.\")\n",
+    "    if tn + fp == 0:\n",
+    "        warnings.warn(\"No negative samples. Specificity may not be meaningful.\")\n",
+    "\n",
+    "def fit_model(model, X_train, y_train, X_test, y_test):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "    print_confusion_matrix_report(cm, y_test, y_pred)\n",
+    "    return model\n",
+    "\n",
+    "def grid_search_augmented(X_train_adasyn, y_train_adasyn, X_test, y_test):\n",
+    "    # Frozen parameters\n",
+    "    frozen_params = {\n",
+    "        'bootstrap': [True],\n",
+    "        'criterion': ['gini'],\n",
+    "        'max_depth': [3],\n",
+    "        'max_features': ['sqrt'],\n",
+    "        'min_samples_leaf': [1],\n",
+    "        'min_samples_split': [2],\n",
+    "        'n_estimators': [50]\n",
+    "    }\n",
+    "\n",
+    "    # Additional parameters to tune\n",
+    "    param_grid = {\n",
+    "        # 'class_weight': [None, 'balanced', 'balanced_subsample'],\n",
+    "        # 'ccp_alpha': [0.0, 0.1, 0.2],\n",
+    "        # 'max_samples': [None, 0.5, 0.7, 0.9],\n",
+    "        # 'oob_score': [True, False],\n",
+    "        # 'warm_start': [True, False],\n",
+    "        # 'n_jobs': [-1]\n",
+    "    }\n",
+    "\n",
+    "    # Combine frozen parameters and additional parameters\n",
+    "    param_grid.update(frozen_params)\n",
+    "\n",
+    "    # Define the ExtraTreesClassifier model\n",
+    "    model = ExtraTreesClassifier()\n",
+    "\n",
+    "    # Define the scoring functions\n",
+    "    scoring = {\n",
+    "        'accuracy': make_scorer(accuracy_score),\n",
+    "        'mcc': make_scorer(matthews_corrcoef)\n",
+    "    }\n",
+    "\n",
+    "    # Perform grid search for ADASYN\n",
+    "    print(\"Grid search for ExtraTreesClassifier with ADASYN:\")\n",
+    "    grid_search_adasyn = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring=scoring,\n",
+    "        refit='accuracy',  # Specify the metric to use for refitting the best model\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
+    "\n",
+    "    # Get the best model based on accuracy\n",
+    "    best_model_accuracy = grid_search_adasyn.best_estimator_\n",
+    "    best_params_accuracy = grid_search_adasyn.best_params_\n",
+    "\n",
+    "    # Get the best model based on MCC score\n",
+    "    best_index_mcc = np.argmax(grid_search_adasyn.cv_results_['mean_test_mcc'])\n",
+    "    best_params_mcc = grid_search_adasyn.cv_results_['params'][best_index_mcc]\n",
+    "    best_model_mcc = ExtraTreesClassifier(**best_params_mcc)\n",
+    "\n",
+    "    # Evaluate the best model based on accuracy\n",
+    "    print(\"\\nBest Model based on Accuracy:\")\n",
+    "    print(f\"Best parameters: {best_params_accuracy}\")\n",
+    "    fit_model(best_model_accuracy, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "\n",
+    "    # Evaluate the best model based on MCC score\n",
+    "    print(\"\\nBest Model based on MCC Score:\")\n",
+    "    print(f\"Best parameters: {best_params_mcc}\")\n",
+    "    fit_model(best_model_mcc, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "\n",
+    "# Example usage\n",
+    "grid_search_augmented(X_train_adasyn, y_train_adasyn, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
