--- a/notebooks/new_classifiers.ipynb
+++ b/notebooks/new_classifiers.ipynb
@@ -1711,6 +1711,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid search for Naive Bayes with SMOTE:\n",
+      "Fitting 10 folds for each of 5 candidates, totalling 50 fits\n",
+      "\n",
+      "Grid search for Naive Bayes with ADASYN:\n",
+      "Fitting 10 folds for each of 5 candidates, totalling 50 fits\n",
+      "\n",
+      "Best Model based on Accuracy:\n",
+      "SMOTE:\n",
+      "Best parameters: {'var_smoothing': 1e-09}\n",
+      "Confusion Matrix:\n",
+      "[[37 11]\n",
+      " [11 91]]\n",
+      "\n",
+      "True Negatives (TN): 37\n",
+      "False Positives (FP): 11\n",
+      "False Negatives (FN): 11\n",
+      "True Positives (TP): 91\n",
+      "\n",
+      "Accuracy: 0.853\n",
+      "Precision: 0.892\n",
+      "Recall: 0.892\n",
+      "Specificity: 0.771\n",
+      "F1 Score: 0.892\n",
+      "Matthews Correlation Coefficient (MCC): 0.663\n",
+      "\n",
+      "ADASYN:\n",
+      "Best parameters: {'var_smoothing': 1e-09}\n",
+      "Confusion Matrix:\n",
+      "[[37 11]\n",
+      " [11 91]]\n",
+      "\n",
+      "True Negatives (TN): 37\n",
+      "False Positives (FP): 11\n",
+      "False Negatives (FN): 11\n",
+      "True Positives (TP): 91\n",
+      "\n",
+      "Accuracy: 0.853\n",
+      "Precision: 0.892\n",
+      "Recall: 0.892\n",
+      "Specificity: 0.771\n",
+      "F1 Score: 0.892\n",
+      "Matthews Correlation Coefficient (MCC): 0.663\n",
+      "\n",
+      "Best Model based on MCC Score:\n",
+      "SMOTE:\n",
+      "Best parameters: {'var_smoothing': 1e-09}\n",
+      "Confusion Matrix:\n",
+      "[[37 11]\n",
+      " [11 91]]\n",
+      "\n",
+      "True Negatives (TN): 37\n",
+      "False Positives (FP): 11\n",
+      "False Negatives (FN): 11\n",
+      "True Positives (TP): 91\n",
+      "\n",
+      "Accuracy: 0.853\n",
+      "Precision: 0.892\n",
+      "Recall: 0.892\n",
+      "Specificity: 0.771\n",
+      "F1 Score: 0.892\n",
+      "Matthews Correlation Coefficient (MCC): 0.663\n",
+      "\n",
+      "ADASYN:\n",
+      "Best parameters: {'var_smoothing': 1e-09}\n",
+      "Confusion Matrix:\n",
+      "[[37 11]\n",
+      " [11 91]]\n",
+      "\n",
+      "True Negatives (TN): 37\n",
+      "False Positives (FP): 11\n",
+      "False Negatives (FN): 11\n",
+      "True Positives (TP): 91\n",
+      "\n",
+      "Accuracy: 0.853\n",
+      "Precision: 0.892\n",
+      "Recall: 0.892\n",
+      "Specificity: 0.771\n",
+      "F1 Score: 0.892\n",
+      "Matthews Correlation Coefficient (MCC): 0.663\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import confusion_matrix, matthews_corrcoef, make_scorer, accuracy_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "def print_confusion_matrix_report(cm, y_true, y_pred):\n",
+    "    tn, fp, fn, tp = cm.ravel()\n",
+    "    total = np.sum(cm)\n",
+    "    accuracy = (tp + tn) / total\n",
+    "    precision = tp / (tp + fp) if (tp + fp) != 0 else 0\n",
+    "    recall = tp / (tp + fn) if (tp + fn) != 0 else 0\n",
+    "    specificity = tn / (tn + fp) if (tn + fp) != 0 else 0\n",
+    "    f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) != 0 else 0\n",
+    "    mcc = matthews_corrcoef(y_true, y_pred)\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(cm)\n",
+    "    print()\n",
+    "    print(f\"True Negatives (TN): {tn}\")\n",
+    "    print(f\"False Positives (FP): {fp}\")\n",
+    "    print(f\"False Negatives (FN): {fn}\")\n",
+    "    print(f\"True Positives (TP): {tp}\")\n",
+    "    print()\n",
+    "    print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "    print(f\"Precision: {precision:.3f}\")\n",
+    "    print(f\"Recall: {recall:.3f}\")\n",
+    "    print(f\"Specificity: {specificity:.3f}\")\n",
+    "    print(f\"F1 Score: {f1_score:.3f}\")\n",
+    "    print(f\"Matthews Correlation Coefficient (MCC): {mcc:.3f}\")\n",
+    "    if precision == 0 and recall == 0:\n",
+    "        warnings.warn(\"Precision and Recall are both zero. F1 Score may not be meaningful.\")\n",
+    "    if tn + fp == 0:\n",
+    "        warnings.warn(\"No negative samples. Specificity may not be meaningful.\")\n",
+    "\n",
+    "def fit_model(model, X_train, y_train, X_test, y_test):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "    print_confusion_matrix_report(cm, y_test, y_pred)\n",
+    "    return model\n",
+    "\n",
+    "def grid_search_augmented(X_train_smote, y_train_smote, X_train_adasyn, y_train_adasyn, X_test, y_test):\n",
+    "    param_grid = {\n",
+    "        'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5]\n",
+    "    }\n",
+    "\n",
+    "    # Define the Naive Bayes model\n",
+    "    model = GaussianNB()\n",
+    "\n",
+    "    # Define the scoring functions\n",
+    "    scoring = {\n",
+    "        'accuracy': make_scorer(accuracy_score),\n",
+    "        'mcc': make_scorer(matthews_corrcoef)\n",
+    "    }\n",
+    "\n",
+    "    # Perform grid search for SMOTE\n",
+    "    print(\"Grid search for Naive Bayes with SMOTE:\")\n",
+    "    grid_search_smote = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring=scoring,\n",
+    "        refit='accuracy',\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_smote.fit(X_train_smote, y_train_smote)\n",
+    "\n",
+    "    # Get the best model based on accuracy for SMOTE\n",
+    "    best_model_accuracy_smote = grid_search_smote.best_estimator_\n",
+    "    best_params_accuracy_smote = grid_search_smote.best_params_\n",
+    "\n",
+    "    # Get the best model based on MCC score for SMOTE\n",
+    "    best_index_mcc_smote = np.argmax(grid_search_smote.cv_results_['mean_test_mcc'])\n",
+    "    best_params_mcc_smote = grid_search_smote.cv_results_['params'][best_index_mcc_smote]\n",
+    "    best_model_mcc_smote = GaussianNB(**best_params_mcc_smote)\n",
+    "\n",
+    "    # Perform grid search for ADASYN\n",
+    "    print(\"\\nGrid search for Naive Bayes with ADASYN:\")\n",
+    "    grid_search_adasyn = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid,\n",
+    "        scoring=scoring,\n",
+    "        refit='accuracy',\n",
+    "        cv=10,\n",
+    "        n_jobs=-1,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    grid_search_adasyn.fit(X_train_adasyn, y_train_adasyn)\n",
+    "\n",
+    "    # Get the best model based on accuracy for ADASYN\n",
+    "    best_model_accuracy_adasyn = grid_search_adasyn.best_estimator_\n",
+    "    best_params_accuracy_adasyn = grid_search_adasyn.best_params_\n",
+    "\n",
+    "    # Get the best model based on MCC score for ADASYN\n",
+    "    best_index_mcc_adasyn = np.argmax(grid_search_adasyn.cv_results_['mean_test_mcc'])\n",
+    "    best_params_mcc_adasyn = grid_search_adasyn.cv_results_['params'][best_index_mcc_adasyn]\n",
+    "    best_model_mcc_adasyn = GaussianNB(**best_params_mcc_adasyn)\n",
+    "\n",
+    "    # Evaluate the best models based on accuracy\n",
+    "    print(\"\\nBest Model based on Accuracy:\")\n",
+    "    print(\"SMOTE:\")\n",
+    "    print(f\"Best parameters: {best_params_accuracy_smote}\")\n",
+    "    fit_model(best_model_accuracy_smote, X_train_smote, y_train_smote, X_test, y_test)\n",
+    "\n",
+    "    print(\"\\nADASYN:\")\n",
+    "    print(f\"Best parameters: {best_params_accuracy_adasyn}\")\n",
+    "    fit_model(best_model_accuracy_adasyn, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "\n",
+    "    # Evaluate the best models based on MCC score\n",
+    "    print(\"\\nBest Model based on MCC Score:\")\n",
+    "    print(\"SMOTE:\")\n",
+    "    print(f\"Best parameters: {best_params_mcc_smote}\")\n",
+    "    fit_model(best_model_mcc_smote, X_train_smote, y_train_smote, X_test, y_test)\n",
+    "\n",
+    "    print(\"\\nADASYN:\")\n",
+    "    print(f\"Best parameters: {best_params_mcc_adasyn}\")\n",
+    "    fit_model(best_model_mcc_adasyn, X_train_adasyn, y_train_adasyn, X_test, y_test)\n",
+    "\n",
+    "# Example usage\n",
+    "grid_search_augmented(X_train_smote, y_train_smote, X_train_adasyn, y_train_adasyn, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
